ace/ace-dashboard/ace-dashboard-network-policy-icp4i.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ace-dashboard-network-policy-icp4i
  namespace: ace
  labels:
    app.kubernetes.io/instance: ace-dashboard-demo-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ace-dashboard-demo-dev
  ingress:
    - ports:
        - protocol: TCP
          port: 3001
        - protocol: TCP
          port: 3443
        - protocol: TCP
          port: 8300
        - protocol: TCP
          port: 443
  policyTypes:
    - Ingress
